fix collapse

--- a/app/assets/stylesheets/pages/deals_page.scss
+++ b/app/assets/stylesheets/pages/deals_page.scss
@@ -313,8 +313,34 @@
     min-height: 900px;
   }
 }
+#slideToggleMobile {
+
+  .panel {
+    margin-bottom: 0px;
+  }
+
+  .panel-default {
+    border: transparent;
+  }
+
+  .panel-body {
+    // height: 70px;
+    .wrapper-where-search {
+      position: relative;
+      bottom: 0px;
+    }
+
+    .wrap-middle-mobile {
+      margin-top: 0em;
+    }
+  }
+}
 
 #slideToggle {
+
+  .panel {
+    margin-bottom: 0px;
+  }
 
 	.panel-default {
 		border: transparent;
@@ -420,15 +446,20 @@
   }
 }
 
-.arrow-downs {
-  &:before {
-    position: absolute;
-    top: 140px;
-    left: 50%;
-    margin-left: -15px;
+.wrapper-arrow-down {
+  width: 30px;
+  height: 30px;
+  margin: 0px auto;
+
+  .arrow-downs {
+    position: relative;
+    top: -15px;
+    // position: absolute;
+    // top: 140px;
+    // left: 50%;
+    // margin-left: -15px;
     width: 30px;
-    height: 90px;
-    content: '';
+    height: 40px;
     background: image-url("down-chevron-grey.png") no-repeat;
     background-position: 0px 0px;
     -webkit-animation: arrowmove2 2s infinite; /* Chrome, Safari, Opera */
@@ -436,21 +467,21 @@
   }
 }
 
-.arrow-downs-white {
-  &:before {
-    position: absolute;
-    top: 80px;
-    left: 50%;
-    margin-left: -15px;
-    width: 30px;
-    height: 90px;
-    content: '';
-    background: image-url("down-chevron.png") no-repeat;
-    background-position: 0px 0px;
-    -webkit-animation: arrowmove2 2s infinite; /* Chrome, Safari, Opera */
-    animation: arrowmove2 2s infinite;
-  }
-}
+// .arrow-downs-white {
+//   &:before {
+//     position: absolute;
+//     top: 80px;
+//     left: 50%;
+//     margin-left: -15px;
+//     width: 30px;
+//     height: 90px;
+//     content: '';
+//     background: image-url("down-chevron.png") no-repeat;
+//     background-position: 0px 0px;
+//     -webkit-animation: arrowmove2 2s infinite; /* Chrome, Safari, Opera */
+//     animation: arrowmove2 2s infinite;
+//   }
+// }
 
 .text-header-slide {
 	position: relative;
@@ -495,7 +526,7 @@
 /* Chrome, Safari, Opera */
 @-webkit-keyframes arrowmove2 {
     from {background-position: 0px 0px;opacity: 1;}
-    to {background-position: 0px 17px;opacity: 0;}
+    to {background-position: 0px 0px;opacity: 0;}
 }
 
 /* Standard syntax */
